@@ -275,6 +275,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S900   (EXPERIMENTAL)
        Canon   BJC S9000  (EXPERIMENTAL)
        Canon PIXMA mini220(EXPERIMENTAL)
+       Canon PIXMA mini320(EXPERIMENTAL)
+       Canon PIXMA mini360(EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
